// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card Center 1`] = `
<View
  bg="defaultBackground"
  p={2}
  style={
    Array [
      Object {
        "backgroundColor": "#262523",
        "paddingBottom": 10,
        "paddingLeft": 10,
        "paddingRight": 10,
        "paddingTop": 10,
      },
    ]
  }
>
  <View
    alignItems="center"
    borderRadius={8}
    flexDirection="row"
    height={80}
    justifyContent="center"
    overflow="hidden"
    position="relative"
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 8,
          "flexDirection": "row",
          "height": 80,
          "justifyContent": "center",
          "overflow": "hidden",
          "position": "relative",
        },
      ]
    }
  >
    <View
      bg="#C4C4C4"
      position="absolute"
      style={
        Array [
          Object {
            "backgroundColor": "#C4C4C4",
            "position": "absolute",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <Image
        source={
          Object {
            "uri": "https://via.placeholder.com/200",
          }
        }
        style={
          Object {
            "height": 80,
            "width": "auto",
          }
        }
      />
    </View>
    <View
      bg="rgba(0, 0, 0, 0.4)"
      height="100%"
      position="absolute"
      style={
        Array [
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.4)",
            "height": "100%",
            "position": "absolute",
            "width": "100%",
          },
        ]
      }
      width="100%"
    />
    <View
      flexDirection="column"
      px={4}
      style={
        Array [
          Object {
            "flexDirection": "column",
            "paddingLeft": 20,
            "paddingRight": 20,
          },
        ]
      }
    >
      <Text
        color="white"
        css={
          Object {
            "position": "relative",
            "zIndex": 2,
          }
        }
        fontFamily="body"
        fontSize={3}
        fontWeight="bold"
        style={
          Array [
            Object {
              "color": "white",
              "fontFamily": "Helvetica",
              "fontSize": 17,
              "fontWeight": "700",
            },
          ]
        }
      >
        Coffee time
      </Text>
    </View>
  </View>
  <View
    alignItems="center"
    borderRadius={8}
    flexDirection="row"
    height={80}
    justifyContent="center"
    overflow="hidden"
    position="relative"
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 8,
          "flexDirection": "row",
          "height": 80,
          "justifyContent": "center",
          "overflow": "hidden",
          "position": "relative",
        },
      ]
    }
  >
    <View
      bg="#C4C4C4"
      position="absolute"
      style={
        Array [
          Object {
            "backgroundColor": "#C4C4C4",
            "position": "absolute",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <Image
        source={
          Object {
            "uri": "https://via.placeholder.com/200",
          }
        }
        style={
          Object {
            "height": 80,
            "width": "auto",
          }
        }
      />
    </View>
    <View
      bg="rgba(0, 0, 0, 0.4)"
      height="100%"
      position="absolute"
      style={
        Array [
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.4)",
            "height": "100%",
            "position": "absolute",
            "width": "100%",
          },
        ]
      }
      width="100%"
    />
    <View
      flexDirection="column"
      px={4}
      style={
        Array [
          Object {
            "flexDirection": "column",
            "paddingLeft": 20,
            "paddingRight": 20,
          },
        ]
      }
    >
      <Text
        color="white"
        css={
          Object {
            "position": "relative",
            "zIndex": 2,
          }
        }
        fontFamily="body"
        fontSize={3}
        fontWeight="bold"
        style={
          Array [
            Object {
              "color": "white",
              "fontFamily": "Helvetica",
              "fontSize": 17,
              "fontWeight": "700",
            },
          ]
        }
      >
        Long Text Long Text Long Text Long Text Long Text Long Text Long Text
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Card Left 1`] = `
Array [
  <View
    bg="defaultBackground"
    p={2}
    style={
      Array [
        Object {
          "backgroundColor": "#262523",
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
        },
      ]
    }
  >
    <View
      alignItems="center"
      borderRadius={4}
      flexDirection="row"
      height={80}
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 4,
            "flexDirection": "row",
            "height": 80,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        bg="#C4C4C4"
        height="100%"
        position="absolute"
        style={
          Array [
            Object {
              "backgroundColor": "#C4C4C4",
              "height": "100%",
              "position": "absolute",
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <Image
          source={
            Object {
              "uri": "https://via.placeholder.com/200",
            }
          }
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        flex={1}
        flexDirection="column"
        px={4}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
              "paddingLeft": 20,
              "paddingRight": 20,
            },
          ]
        }
      >
        <Text
          color="white"
          css={
            Object {
              "position": "relative",
              "zIndex": 2,
            }
          }
          fontFamily="body"
          fontSize={4}
          fontWeight="bold"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "white",
                "fontFamily": "Helvetica",
                "fontSize": 20,
                "fontWeight": "700",
              },
            ]
          }
        >
          Coffee time
        </Text>
        <Text
          color="white"
          css={
            Object {
              "position": "relative",
              "zIndex": 2,
            }
          }
          fontFamily="body"
          fontSize={1}
          fontWeight="bold"
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "white",
                "fontFamily": "Helvetica",
                "fontSize": 12,
                "fontWeight": "700",
              },
            ]
          }
        >
          Một chút mô tả
        </Text>
      </View>
    </View>
  </View>,
  <View
    bg="defaultBackground"
    p={2}
    style={
      Array [
        Object {
          "backgroundColor": "#262523",
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
        },
      ]
    }
  >
    <View
      alignItems="center"
      borderRadius={4}
      flexDirection="row"
      height={80}
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 4,
            "flexDirection": "row",
            "height": 80,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        bg="#C4C4C4"
        height="100%"
        position="absolute"
        style={
          Array [
            Object {
              "backgroundColor": "#C4C4C4",
              "height": "100%",
              "position": "absolute",
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <Image
          source={
            Object {
              "uri": "https://via.placeholder.com/200",
            }
          }
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        flex={1}
        flexDirection="column"
        px={4}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
              "paddingLeft": 20,
              "paddingRight": 20,
            },
          ]
        }
      >
        <Text
          color="white"
          css={
            Object {
              "position": "relative",
              "zIndex": 2,
            }
          }
          fontFamily="body"
          fontSize={4}
          fontWeight="bold"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "white",
                "fontFamily": "Helvetica",
                "fontSize": 20,
                "fontWeight": "700",
              },
            ]
          }
        >
          Coffee time Coffee time Coffee time Coffee time Coffee time Coffee time Coffee time
        </Text>
        <Text
          color="white"
          css={
            Object {
              "position": "relative",
              "zIndex": 2,
            }
          }
          fontFamily="body"
          fontSize={1}
          fontWeight="bold"
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "white",
                "fontFamily": "Helvetica",
                "fontSize": 12,
                "fontWeight": "700",
              },
            ]
          }
        >
          Một chút mô tả Một chút mô tả Một chút mô tả Một chút mô tả Một chút mô tả Một chút mô tả Một chút mô tả Một chút mô tả Một chút mô tả Một chút mô tả Một chút mô tả Một chút mô tả
        </Text>
      </View>
    </View>
  </View>,
  <View
    bg="defaultBackground"
    p={2}
    style={
      Array [
        Object {
          "backgroundColor": "#262523",
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
        },
      ]
    }
  >
    <View
      alignItems="center"
      borderRadius={4}
      flexDirection="row"
      height={80}
      overflow="hidden"
      position="relative"
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 4,
            "flexDirection": "row",
            "height": 80,
            "overflow": "hidden",
            "position": "relative",
          },
        ]
      }
    >
      <View
        bg="#C4C4C4"
        height="100%"
        position="absolute"
        style={
          Array [
            Object {
              "backgroundColor": "#C4C4C4",
              "height": "100%",
              "position": "absolute",
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <Image
          source={
            Object {
              "uri": "https://via.placeholder.com/200",
            }
          }
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        flex={1}
        flexDirection="column"
        px={4}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
              "paddingLeft": 20,
              "paddingRight": 20,
            },
          ]
        }
      >
        <Text
          color="white"
          css={
            Object {
              "position": "relative",
              "zIndex": 2,
            }
          }
          fontFamily="body"
          fontSize={4}
          fontWeight="bold"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "white",
                "fontFamily": "Helvetica",
                "fontSize": 20,
                "fontWeight": "700",
              },
            ]
          }
        >
          Coffee time
        </Text>
        <Text
          color="white"
          css={
            Object {
              "position": "relative",
              "zIndex": 2,
            }
          }
          fontFamily="body"
          fontSize={1}
          fontWeight="bold"
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "white",
                "fontFamily": "Helvetica",
                "fontSize": 12,
                "fontWeight": "700",
              },
            ]
          }
        >
           
        </Text>
      </View>
    </View>
  </View>,
]
`;
